# zed-mcp-server-relytone

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
configuration/: default_settings.jsonc  installation_instructions.md
src/: mcp_server_relytone.rs
