[package]
name = "mcp_server_relytone"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
authors = ["Yuwei XIAO <ywxiaozero@gmail.com>"]
repository = "https://github.com/YuweiXiao/zed-mcp-server-relytone.git"

[lib]
path = "src/mcp_server_relytone.rs"
crate-type = ["cdylib"]

[dependencies]
schemars = "0.8"
serde = "1.0"
zed_extension_api = "0.7.0"
